tests/toy/neg/001309_mutation.toylang
program a = { var do a : bool; } .
